initial email fix

--- a/force-app/main/default/classes/ParametersDataProvider.cls
+++ b/force-app/main/default/classes/ParametersDataProvider.cls
@@ -283,7 +283,11 @@ public without sharing class ParametersDataProvider {
     
     private void initParamsFromContact(Id contactId){
         Contact cnt = [
-                SELECT Id, Name, Salutation,
+                SELECT Id,
+                        Name,
+                        FirstName,
+                        LastName,
+                        Salutation,
                         Language__c,
                         userCommunityMode__c,
                         UserCommunityIsDelegate__c
