--- a/force-app/main/default/classes/AlertsRemote.cls
+++ b/force-app/main/default/classes/AlertsRemote.cls
@@ -6,8 +6,12 @@ public class AlertsRemote {
     
     @AuraEnabled
     public static String getAlerts(String userMode){
-        List<Alert> alerts = Alert.getContactAlerts(CommunityService.getUserContact().Id);
-        return JSON.serialize(alerts);
+        try {
+            List<Alert> alerts = Alert.getContactAlerts(CommunityService.getUserContact().Id);
+            return JSON.serialize(alerts);
+        } catch (Exception e) {
+            return (String) AuraHelper.throwException(e);
+        }
     }
     
     @AuraEnabled
@@ -16,7 +20,7 @@ public class AlertsRemote {
             Alert__c alert = new Alert__c(Id = alertId, Viewed__c = true);
             update alert;
         }catch (Exception e){
-            throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
+            AuraHelper.throwException(e);
         }
     }
 
