Delegates - My Team and Add new Team Member Pages fixes, Request to Refer fix. Alerts wrong Id error fix. My Study Delegate permissions fix.

--- a/force-app/main/default/classes/AlertsRemote.cls
+++ b/force-app/main/default/classes/AlertsRemote.cls
@@ -6,7 +6,7 @@ public class AlertsRemote {
     
     @AuraEnabled
     public static String getAlerts(String userMode){
-        List<Alert> alerts = Alert.getContactAlerts(CommunityService.getUserContact().Id);
+        List<Alert> alerts = Alert.getContactAlerts(CommunityService.getUserContact().Id, userMode);
         return JSON.serialize(alerts);
     }
     
