--- a/force-app/main/default/classes/ContentDocumentLinkTriggerHandler.cls
+++ b/force-app/main/default/classes/ContentDocumentLinkTriggerHandler.cls
@@ -8,7 +8,8 @@ public with sharing class ContentDocumentLinkTriggerHandler extends TriggerHandl
     }
     public override void afterInsert(List<SObject> newList) {
         ContentDocumentLinkService contentDocumentLinkService = (ContentDocumentLinkService) ClassFactory.newInstance(ContentDocumentLinkService.class);
-        contentDocumentLinkService.remindEventFire(newList);
+        PlatformEventService platformEventService = (PlatformEventService) ClassFactory.newInstance(PlatformEventService.class);
         contentDocumentLinkService.createURLsForImagesOnResources(newList);
+        platformEventService.remindEventFire((List<ContentDocumentLink>) newList);
     }
 }
