--- a/force-app/main/default/classes/ResStudyTriggerHandler.cls
+++ b/force-app/main/default/classes/ResStudyTriggerHandler.cls
@@ -5,12 +5,12 @@ public with sharing class ResStudyTriggerHandler extends TriggerHandler {
 
     public override void afterInsert(List<SObject> newList) {
         PlatformEventService platformEventService = (PlatformEventService) ClassFactory.newInstance(PlatformEventService.class);
-        platformEventService.remindEventFire();
+        platformEventService.remindEventFire((List<Res_study__c>) newList);
     }
 
     public override void afterDelete(List<SObject> oldList) {
         PlatformEventService platformEventService = (PlatformEventService) ClassFactory.newInstance(PlatformEventService.class);
-        platformEventService.remindEventFire();
+        platformEventService.remindEventFire((List<Res_study__c>) oldList);
     }
 
 }
